--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,15 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
 # Boost ..
 SET(BOOST_MIN_VERSION 1.46.0)
-FIND_PACKAGE(Boost ${BOOST_MIN_VERSION} REQUIRED)
+FIND_PACKAGE(Boost ${BOOST_MIN_VERSION} REQUIRED COMPONENTS filesystem system)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lboost_system")
+LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
+
+#Qt5
+FIND_PACKAGE(Qt5 REQUIRED Widgets)
+FIND_PACKAGE(Qt5Core)
+FIND_PACKAGE(Qt5Gui)
+
 
 # SPRNG ..
 #FIND_PACKAGE(SPRNG REQUIRED)
