--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 ADD_EXECUTABLE(viennats     viennats.cpp)
-TARGET_LINK_LIBRARIES(viennats ${LIBRARIES})
+TARGET_LINK_LIBRARIES(viennats ${LIBRARIES} Qt5::Widgets Qt5::Core ${Boost_LIBRARIES})
