--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,9 +67,13 @@ INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
 #Qt5
-FIND_PACKAGE(Qt5 REQUIRED Widgets)
-FIND_PACKAGE(Qt5Core)
-FIND_PACKAGE(Qt5Gui)
+FIND_PACKAGE(Qt5Widgets REQUIRED)
+FIND_PACKAGE(Qt5Core REQUIRED)
+FIND_PACKAGE(Qt5Gui REQUIRED)
+set(QT5_LIBRARIES Qt5::Widgets Qt5::Core Qt5::Gui)
+
+
+
 
 
 # SPRNG ..
