--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
-ADD_EXECUTABLE(viennats     viennats.cpp)
-TARGET_LINK_LIBRARIES(viennats ${LIBRARIES} Qt5::Widgets Qt5::Core ${Boost_LIBRARIES})
+qt5_wrap_cpp(QT_GENERATED_HEADER ${CMAKE_SOURCE_DIR}/viennats/LSlib/visualization.hpp)
+ADD_EXECUTABLE(viennats     viennats.cpp ${QT_GENERATED_HEADER})
+TARGET_LINK_LIBRARIES(viennats ${LIBRARIES} ${QT5_LIBRARIES} ${Boost_LIBRARIES})
