--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,8 @@ LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 FIND_PACKAGE(Qt5Widgets REQUIRED)
 FIND_PACKAGE(Qt5Core REQUIRED)
 FIND_PACKAGE(Qt5Gui REQUIRED)
-set(QT5_LIBRARIES Qt5::Widgets Qt5::Core Qt5::Gui)
+FIND_PACKAGE(Qt5OpenGL REQUIRED)
+set(QT5_LIBRARIES Qt5::Widgets Qt5::Core Qt5::Gui Qt5::OpenGL)
 
 
 ADD_DEFINITIONS(-DGUI_ENABLED)
